[package]
name = "nucleo-32-ws2812-rs"
authors = ["Erik Scott Korzon <eskorzon@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.3.3", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"]}
embassy-stm32 = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "defmt", "unstable-pac", "stm32l432kc", "memory-x", "time-driver-any", "exti", "unstable-traits", "chrono"] }
embassy-time = { version = "0.1.5", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768", "unstable-traits", "nightly"] }
embedded-hal = "0.2.7"
nb = "1.1.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
smart-leds = "0.3.0"
static_cell = "2.0.0"
ws2812-spi = "0.4.0"

[profile.release]
debug = 2

[profile.dev]
opt-level = 3
